samples/_failures_safe/1761476555_a04432_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62720abc.c: In function ‘main’:
./samples/SAFE/__tmp_62720abc.c:146:9: error: expected expression at end of input
  146 |         if (target_level !=
      |         ^~
./samples/SAFE/__tmp_62720abc.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_62720abc.c:146:9: error: expected declaration or statement at end of input
